fix: ajuste liberação CORS